<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MindTheMine</string>
    <string name="restart">RESTART</string>
    <string name="settings">Settings</string>
    <string name="competitive_multiplayer_mode">Competitive Multiplayer Mode</string>
    <string name="cooperative_multiplayer_mode">Cooperative MultiPlayer Mode</string>
    <string name="single_player_mode">Single Player Mode</string>
    <string name="icon">Icon</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="difficulty">Difficulty:</string>
    <string name="vibration">Vibration:</string>
    <string name="remainingCounterInitVal">00</string>
    <string name="txtAccInf">∞</string>
    <string name="txtAgeInit">0</string>
    <string name="lblMeter">m</string>
    <string name="lblAcc">Accuracy:</string>
    <string name="lblAccInitValAgo">seconds ago.</string>
    <string name="lblAccInitValLast">Last location update:</string>
    <string name="lblAccInitVal">" "</string>
    <string name="distance">Distance in m:</string>
    <string name="space" />
    <string name="gestures">Gestures</string>
    <string name="title_activity_2">Activity2</string>
    <string name="looking_for_a_game" tools:ignore="TypographyEllipsis">Looking for a game...</string>
    <string name="match_id">Match-ID:</string>
    <string name="enter">Enter</string>
</resources>
